[*] package.json updated

--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "start": "concurrently \"npm run watch\" \"npm run serve\"",
     "serve": "npm run build && browser-sync --no-notify start -s --serveStatic 'dist' --files 'dist'",
-    "build": "npm run build:styles && npm run build:images && npm run build:html && npm run build:scripts && npm run build:vendors",
-    "watch": "concurrently \"npm run watch:styles\" \"npm run watch:images\" \"npm run watch:html\" \"npm run watch:scripts\" \"npm run watch:vendors\"",
+    "build": "npm run build:styles && npm run build:ie7 && npm run build:images && npm run build:fonts && npm run build:html && npm run build:scripts && npm run build:vendors",
+    "watch": "concurrently \"npm run watch:styles\" \"npm run watch:ie7\" \"npm run watch:images\" \"npm run watch:fonts\" \"npm run watch:html\" \"npm run watch:scripts\" \"npm run watch:vendors\"",
     "build:styles": "node-sass src/styles/main.scss dist/styles/style.css",
     "build:scripts": "babel \"src/scripts\" --out-dir \"dist/scripts\" --copy-files --presets es2015",
     "build:vendors": "cpx \"src/vendors/**/*\" \"dist/vendors/\"",
+    "build:ie7": "cpx \"src/ie7/**/*\" \"dist/ie7\"",
     "build:images": "cpx \"src/images/**/*\" \"dist/images\"",
+    "build:fonts": "cpx \"src/fonts/**/*\" \"dist/fonts\"",
     "build:html": "cpx \"src/**/*.html\" \"dist/\"",
     "watch:styles": "node-sass src/styles/main.scss dist/styles/style.css -w",
     "watch:scripts": "babel \"src/scripts\" -w --out-dir \"dist/scripts\" --copy-files --presets es2015 ",
+    "watch:ie7": "cpx \"src/ie7/**/*\" \"dist/ie7\" -w",
     "watch:images": "cpx \"src/images/**/*\" \"dist/images\" -w",
+    "watch:fonts": "cpx \"src/fonts/**/*\" \"dist/fonts\" -w",
     "watch:html": "cpx \"src/**/*.html\" \"dist/\" -w",
     "watch:vendors": "cpx \"src/vendors/**/*\" \"dist/vendors/\" -w"
   },
