--- a/public/manifest.json
+++ b/public/manifest.json
@@ -51,5 +51,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#00c752",
-  "background_color": "#00c752",
+  "background_color": "#00c752"
 }
