--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "sass-css3-mixins": "^0.1.0"
   }
