--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build-css": "node-sass src/styles/main.scss -o src/styles/",
-    "watch-css": "npm run build-css && node-sass src/styles/main.scss -o src/styles/ -w",
+    "build-css": "node-sass src/assets/styles/main.scss -o src/assets/styles/",
+    "watch-css": "npm run build-css && node-sass src/assets/styles/main.scss -o src/assets/styles/ -w",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
