Implement the endpoints to consume the Yahoo Finance API

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build-css": "node-sass src/assets/styles/main.scss -o src/assets/styles/",
     "watch-css": "npm run build-css && node-sass src/assets/styles/main.scss -o src/assets/styles/ -w",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "npm-run-all -p watch-css start-js start-server",
+    "start-server": "nodemon --ignore src/ server.js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
@@ -19,8 +20,13 @@
   "author": "Quotation Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "flexboxgrid-sass": "^8.0.5",
+    "mongoose": "^4.13.4",
     "node-sass": "^4.6.0",
+    "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
