Implemented cron job to consult the Yahoo Finance API every hour

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch-css": "npm run build-css && node-sass src/assets/styles/main.scss -o src/assets/styles/ -w",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js start-server",
-    "start-server": "nodemon --ignore src/ server.js",
+    "start-server": "nodemon --ignore src/ api.js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
@@ -26,6 +26,7 @@
     "flexboxgrid-sass": "^8.0.5",
     "mongoose": "^4.13.4",
     "node-sass": "^4.6.0",
+    "node-schedule": "^1.2.5",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.2",
     "react": "^16.0.0",
