Improvements on get Yahoo Finance API data

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "flexboxgrid-sass": "^8.0.5",
+    "moment": "^2.19.2",
     "mongoose": "^4.13.4",
     "node-sass": "^4.6.0",
     "node-schedule": "^1.2.5",
