--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "watch-css": "npm run build-css && node-sass src/assets/styles/main.scss -o src/assets/styles/ -w",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js start-server",
-    "start-server": "nodemon --ignore src/ api.js",
+    "start-server": "nodemon --ignore src/ server.js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
+    "serve": "npm-run-all -p serve:build serve:server",
+    "serve:build": "serve -s build/",
+    "serve:server": "node server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -35,6 +38,7 @@
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "sass-css3-mixins": "^0.1.0"
+    "sass-css3-mixins": "^0.1.0",
+    "serve": "^6.4.1"
   }
 }
